--- a/build.gradle
+++ b/build.gradle
@@ -16,5 +16,6 @@ dependencies {
 jar {
     manifest{
         attributes "Agent-Class" : "cn.tellwhy.report.agent.AgentTest"
+        attributes "Premain-Class" : "cn.tellwhy.report.agent.AgentTest"
     }
 }
