--- a/build.gradle
+++ b/build.gradle
@@ -3,13 +3,27 @@ version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
 
-sourceCompatibility = 1.5
-
 repositories {
+    mavenLocal()
+    maven {
+        url 'http://192.168.2.51:8081/nexus/content/repositories/thirdparty/'
+    }
+    maven {
+        url 'http://192.168.2.51:8081/nexus/content/groups/public/'
+    }
     mavenCentral()
 }
 
 dependencies {
+    // https://mvnrepository.com/artifact/com.sun.tools.btrace/btrace-boot
+    compile group: 'com.sun.tools.btrace', name: 'btrace-boot', version: '1.2.3'
+    // https://mvnrepository.com/artifact/com.sun.tools.btrace/btrace-agent
+    compile group: 'com.sun.tools.btrace', name: 'btrace-agent', version: '1.2.3'
+    // https://mvnrepository.com/artifact/com.sun.tools.btrace/btrace-client
+    compile group: 'com.sun.tools.btrace', name: 'btrace-client', version: '1.2.3'
+    // https://mvnrepository.com/artifact/com.sun.tools.btrace/btrace-asm
+    compile group: 'com.sun.tools.btrace', name: 'btrace-asm', version: '3.1'
+
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
 
